--- a/Atom.ECS.asmdef
+++ b/Atom.ECS.asmdef
@@ -2,9 +2,9 @@
     "name": "Atom.ECS",
     "rootNamespace": "",
     "references": [
-        "GUID:5957643ee62fb75498d29ee03d7011ef",
-        "GUID:e0cd26848372d4e5c891c569017e11f1",
-        "GUID:2665a8d13d1b3f18800f46e256720795"
+        "Atom.Lib",
+        "Unity.Collections",
+        "Unity.Burst"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
